create folder structure and collection page

--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-development:
-  password: shptka_14dd43c9577e50f36157b9e4cf3b8ed7
-  theme_id: "141867057377"
-  store: khwasapi.myshopify.com
+# development:
+#   password: shptka_14dd43c9577e50f36157b9e4cf3b8ed7
+#   theme_id: "141867057377"
+#   store: khwasapi.myshopify.com
